# DFBTerm

./: AUTHORS  ChangeLog  INSTALL  NEWS  README  meson.build  meson_options.txt  meson_setuid.sh  meson_symlink.sh
data/: Misc-Fixed.dgiff  meson.build
src/: dfbterm.c  glib.c  glib.h  meson.build
src/libzvt/: gnome-pty-helper.c  gnome-utmp.c  lists.c  lists.h  subshell-includes.h  subshell.c  subshell.h  update.c  vt.c  vt.h  vtx.h
